<resources>
    <string name="app_name">ThermalApplication</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_community_board">CommunityBoard</string>
    <string name="title_activity_loginpage">Loginpage</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_home_page">HomePage</string>
    <string name="title_activity_login_page">LoginPage</string>
    <string name="loginPageTitle">Login</string>
    <string name="loginPageUsernameFormTitle">Username</string>
    <string name="loginUsernameHint"><font size="15">Enter Username</font></string>
    <string name="loginPasswordHint"><font size="15">Enter Password</font></string>
    <string name="loginPasswordFormTitle">Password</string>
    <string name="loginPageLoginButton">Login</string>
    <string name="loginPageSignUpButton">Sign Up</string>
    <string name="title_activity_sign_up">SignUp</string>
    <string name="signUpUsernameTitle">Username</string>
    <string name="signUpFormTitle"><u>Sign Up Form</u></string>
    <string name="signUpFormUsernameHint"><font size="15">Enter Username</font></string>
    <string name="signUpFormFirstName">First Name</string>
    <string name="signUpFormFirstNameHint"><font size="15">Enter First Name</font></string>
    <string name="requiredField">*</string>
    <string name="signUpLastNameTitle">Last Name</string>
    <string name="lastNameInputHint"><font size="15">Enter Last Name</font></string>
    <string name="signUpEmailInputHint"><font size="15">Enter Email</font></string>
    <string name="signUpEmailTitle">Email</string>
    <string name="signUpPhoneNumberTitle">Phone Number</string>
    <string name="signUpPhoneNumberHint"><font size="15">Enter Phone Number</font></string>
    <string name="signUpFormPasswordHint"><font size="15">Enter Password</font></string>
    <string name="signUpFormPasswordTitle">Password</string>
    <string name="signUpConfirmPasswordHint"><font size="15">Confirm Password</font></string>
    <string name="signUpConfirmPasswordTitle">Confirm Password</string>
    <string name="signUpButton">Sign Up</string>
    <string name="title_activity_camera_page">CameraPage</string>
    <string name="title_activity_create_post_page">CreatePostPage</string>
    <string name="title_activity_display_post">DisplayPost</string>
    <string name="mainTitle">Thermal Camera Application</string>
    <string name="mainAuthors">Author: IshwarKumarMunirathinamAnanthaSekaran, CamThackThack, YoungTree, KidNamedFinger</string>
    <string name="createPostPageDescriptionField">description</string>
    <string name="createPostTitle">Create Post</string>
    <string name="title_text">Connect FLIR Thermal Camera Dashboard</string>
    <string name="sdk_version_text">Thermal SDK version %1$s</string>
    <string name="sdk_commit_hash_text">Thermal SDK commit %1$s</string>
    <string name="connect_f1_text">Connect</string>
    <string name="connect_sim1_text">Connect\nSimulator 1</string>
    <string name="connect_sim2_text">Connect\nSimulator 2</string>
    <string name="connection_status_text">Status %1$s</string>
    <string name="discovery_status_text">Status %1$s</string>
    <string name="start_discovery_text">start Discovery</string>
    <string name="stop_discovery_text">stop Discovery</string>
    <string name="disconnect_text">Disconnect</string>
    <string name="title_main_activity_flir">MainActivityFlir</string>
    <string name="title_activity_flir">FlirActivity</string>
    <string name="flir_activity_image_description">image with IR and visual data mixed</string>
    <string name="flir_activity_original_image_description">image with only visual image</string>
    <string name="flir_activity_screenshot">Screenshot</string>
</resources>