<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    tools:context=".MainActivity">

    <!-- Title  -->
    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_text"
        android:textStyle="bold"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:gravity="center_horizontal"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:id="@+id/discovery_panel" >
        <Button
            android:id="@+id/start_discovery"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="startDiscovery"
            android:text="@string/start_discovery_text"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:layout_weight="1" />

        <Button
            android:id="@+id/stop_discovery"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="stopDiscovery"
            android:text="@string/stop_discovery_text"
            app:layout_constraintTop_toBottomOf="@+id/start_discovery" android:layout_weight="1" android:layout_marginStart="20dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/discovery_panel"
        android:id="@+id/connect_panel"
        >

        <TextView
            android:id="@+id/discovery_status"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:gravity="center_vertical"
            android:text="@string/discovery_status_text"
            android:textSize="13sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginEnd="10dp"
            />

        <Button
            android:id="@+id/connect_flir_one"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="connectFlirOne"
            android:textSize="11sp"
            android:text="@string/connect_f1_text"
            app:layout_constraintBaseline_toBaselineOf="@+id/connect_s1"
            app:layout_constraintStart_toStartOf="@+id/discovery_status" />

        <Button
            android:id="@+id/disconnect_any"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="1dp"
            android:onClick="disconnect"
            android:textSize="11sp"
            android:text="@string/disconnect_text"
            app:layout_constraintStart_toStartOf="@+id/connect_flir_one"
            app:layout_constraintTop_toBottomOf="@+id/connect_flir_one"
            android:layout_marginStart="10dp" />
    </LinearLayout>


    <ImageView
        android:id="@+id/msx_image"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:contentDescription="@string/flir_activity_image_description"
        android:minWidth="50dp"
        android:minHeight="50dp"
        app:layout_constraintBottom_toTopOf="@+id/photo_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/connect_panel" />

    <ImageView
        android:id="@+id/photo_image"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/flir_activity_original_image_description"
        android:minWidth="50dp"
        android:minHeight="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/msx_image" />

<!--    <Button-->
<!--        android:id="@+id/buttonNuc"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginStart="32dp"-->
<!--        android:layout_marginTop="1dp"-->
<!--        android:onClick="performNuc"-->
<!--        android:text="NUC"-->
<!--        app:layout_constraintStart_toEndOf="@+id/disconnect_any"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/connect_s2" />-->


</androidx.constraintlayout.widget.ConstraintLayout>